# data-ingestion-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: sources.yml  sources_extra.yml
ddl/: 00_schemas.sql
etl/: __init__.py  airflow_tasks.py  config.py  db.py  extract.py  pipeline.py  quality.py  state.py  transform.py
etl/connectors/: __init__.py  file_download.py  postgres.py  socrata.py
scripts/: sync_registry.py
tests/: test_transform.py
